--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1><b><u>Class IX<sup>th</sup> 'A' Digital Diary</u></b></h1>
+<h1 id="typing-heading"><span id="typed-text"></span><span class="cursor">|</span></h1>
 
     <div class="date-day-select">
         <div>
